[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Scripts/debug_script.gd" type="Script" id=1]

[node name="DEBUG" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="DebugUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ObjectName" type="Label" parent="CanvasLayer/DebugUI/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coordinates" type="Label" parent="CanvasLayer/DebugUI/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugNode" type="Node2D" parent="."]
[connection signal="draw" from="DebugNode" to="." method="_on_DebugNode_draw"]
